z-index topBar fix

--- a/css/style_dashboard.less
+++ b/css/style_dashboard.less
@@ -16,6 +16,7 @@ body{
   cursor: pointer;
   -webkit-transition: top 1.2s;
   transition: top 1.2s;
+  z-index: 999;
 }
 
 .divTopBar:hover .imgTopBarArrow{
